--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    <header class="container">
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt="" >
@@ -29,10 +29,10 @@
                 <a class="nav-link active " href="#shoes">shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#Bag">Bag</a>
+                <a class="nav-link active" href="#Bag">Backpack</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Contact Us</a>
+                <a class="nav-link active" href="#subscribe">Subscribe</a>
               </li>
             </ul>
           </div>
@@ -243,7 +243,8 @@
           </div>
     </div>   
     </section>
-    <section style="height: 300px;" class="container rounded-3 d-flex mt-5 justify-content-center align-items-center bg-info">
+    <section style="height: 300px;" class="container rounded-3 d-flex mt-5 justify-content-center align-items-center bg-info" id="subscribe" >
+      
       <div>
         <h2>LET'S STAY IN TOUCH
         </h2>
